<resources>
    <string name="app_name">Helpful</string>
    <string name="splash">Splash</string>

    // Title for nav_graph
    <string name="title_splash">Splash</string>
    <string name="title_weather">Weather</string>
    <string name="title_weather_forecast">Weather and Forecast</string>
    <string name="title_breaking_news">Breaking News</string>
    <string name="title_search_news">Search</string>
    <string name="title_favorite_news">Favorite News</string>
    <string name="title_article_news">Article</string>
    <string name="title_article_news_brief">Brief article</string>
    <string name="title_forecast_weather">Details weather</string>

    // Pages titles
    <string name="title_page_current_weather">Current weather</string>
    <string name="subtitle_page_current_weather">List of city</string>
    <string name="title_page_breaking_news">News</string>
    <string name="subtitle_page_breaking_news">Popular News</string>
    <string name="title_page_search_news">Search</string>
    <string name="subtitle_page_article_details">Description</string>
    <string name="subtitle_page_forecast_weather">5 Days / 3 Hour Forecast</string>

    // Hints
    <string name="hint_search">Musk invited</string>

    // Tabs
    <string name="title_tab_weather">Weather</string>
    <string name="title_tab_news">News</string>

    // Buttons
    <string name="btn_visit_site">Visit site</string>
    <string name="btn_load_article_from_site">Load article</string>

    // Bottom menu
    <string name="bottom_menu_weather">Weather</string>
    <string name="bottom_menu_news">News</string>
    <string name="bottom_menu_saved">Favourite</string>
    <string name="bottom_menu_search">Search</string>

    // Toolbar menu
    <string name="toolbar_menu_action_login">Login</string>
    <string name="toolbar_menu_action_logout">Logout</string>

    // Messages
    <string name="msg_weather_feels_like">Feels like </string>

    <string name="chooser_share_article">Share article</string>

    // Alert Dialog
    // Logout
    <string name="alert_dialog_logout_title">Logout</string>
    <string name="alert_dialog_logout_message">Are you sure you want to sign out?</string>
    <string name="alert_dialog_logout_positive_button">Sign out</string>
    <string name="alert_dialog_logout_negative_button">Cancel</string>

</resources>