<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/weatherFragment">
    <fragment
        android:id="@+id/splashFragment"
        android:name="ru.shvets.myappretrofit.view.splash.SplashFragment"
        android:label="@string/splash"
        tools:layout="@layout/fragment_splash" />
    <fragment
        android:id="@+id/weatherFragment"
        android:name="ru.shvets.myappretrofit.view.weather.current.WeatherFragment"
        android:label="@string/title_weather"
        tools:layout="@layout/fragment_weather" >
        <action
            android:id="@+id/action_weatherFragment_to_forecastFragment"
            app:destination="@id/forecastFragment" />
    </fragment>
    <fragment
        android:id="@+id/breakingNewsFragment"
        android:name="ru.shvets.myappretrofit.view.news.breaking.BreakingNewsFragment"
        android:label="@string/title_breaking_news"
        tools:layout="@layout/fragment_breaking_news" >
        <action
            android:id="@+id/action_breakingNewsFragment_to_articleDetailsFragment"
            app:destination="@id/articleDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/savedNewsFragment"
        android:name="ru.shvets.myappretrofit.view.news.saved.SavedNewsFragment"
        android:label="@string/title_favorite_news"
        tools:layout="@layout/fragment_saved_news" >
        <action
            android:id="@+id/action_savedNewsFragment_to_articleDetailsFragment"
            app:destination="@id/articleDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/searchNewsFragment"
        android:name="ru.shvets.myappretrofit.view.news.search.SearchNewsFragment"
        android:label="@string/title_search_news"
        tools:layout="@layout/fragment_search_news" >
        <action
            android:id="@+id/action_searchNewsFragment_to_articleDetailsFragment"
            app:destination="@id/articleDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/articleFragment"
        android:name="ru.shvets.myappretrofit.view.news.article.ArticleFragment"
        android:label="@string/title_article_news"
        tools:layout="@layout/fragment_article" >
        <argument
            android:name="article"
            app:argType="ru.shvets.myappretrofit.data.news.Article" />
    </fragment>
    <fragment
        android:id="@+id/articleDetailsFragment"
        android:name="ru.shvets.myappretrofit.view.news.details.ArticleDetailsFragment"
        android:label="@string/title_article_news_brief"
        tools:layout="@layout/fragment_article_details" >
        <argument
            android:name="article"
            app:argType="ru.shvets.myappretrofit.data.news.Article" />
        <action
            android:id="@+id/action_articleDetailsFragment_to_articleFragment"
            app:destination="@id/articleFragment" />
    </fragment>
    <fragment
        android:id="@+id/forecastFragment"
        android:name="ru.shvets.myappretrofit.view.weather.forecast.ForecastFragment"
        android:label="@string/title_forecast_weather" >
        <argument
            android:name="city"
            app:argType="ru.shvets.myappretrofit.data.weather.Weather" />
    </fragment>
</navigation>